[package]
name = "crate-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "example01",
    "redis-pools",
    "adx-base",
    "prebid-cache-rs",
]

[dependencies]
dyn-clone = "1.0.14"
