[package]
name = "adx-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
futures = "0.3.25"
enum_dispatch = "0.3"



[dev-dependencies]
tokio-test = "*"