[package]
name = "prebid-cache-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
bb8-redis = "0.12"
enum_dispatch = "0.3"
snap = "1"


[dev-dependencies]
tokio-test = "*"