[package]
name = "redis-pools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8-redis = "0.11.0"
anyhow  = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
